# HASHEAEngine

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  RunArchGate.bat  RunPerfGate.bat  RunRenderGate.bat  RunTests.bat  build_editor.bat  build_sandbox.bat  build_tests.bat  generate_vs2022.bat  premake5.lua  run.bat  run_editor.bat
KEnginePub/: CMakeLists.txt
KEnginePub/Private/: IGFX_Private.cpp  IGFX_Private.h  IKHeader.cpp  IKLoadable.cpp  IKShader.h  IKShaderVK.cpp  IKShaderreflector.h  KEngineAdaptiveGame.cpp  KEngineOption.cpp  KEngineOptionBase.cpp  KEnginePerformance.cpp  KEsDrv.cpp  stdafx.h
KEnginePub/Private/comm/: KDelayReleaseQueue.h  KGFX_GraphicDevice.cpp  KGFX_GraphicDevice.h  KGFX_ShaderCombinedResult.cpp  KGFX_ShaderCombinedResult.h  KGFX_ShaderHelper.cpp  KGFX_ShaderHelper.h  KGFX_StaticConstBuffer.cpp  KGFX_StaticConstBuffer.h
KEnginePub/Private/dx12/: KGFX_BarrierDx12.cpp  KGFX_BarrierDx12.h  KGFX_BindlessDx12.cpp  KGFX_BindlessDx12.h  KGFX_BufViewDX12.cpp  KGFX_BufViewDX12.h  KGFX_BufferDx12.cpp  KGFX_BufferDx12.h  KGFX_BufferImplDX12.cpp  KGFX_BufferImplDX12.h  KGFX_CommandBufferDX12Impl.cpp  KGFX_CommandBufferDX12Impl.h  KGFX_CommandBufferQueueDX12.cpp  KGFX_CommandBufferQueueDX12.h  KGFX_ComputeProgramDx12.cpp  KGFX_ComputeProgramDx12.h  KGFX_ConstBufferDx12.cpp  KGFX_ConstBufferDx12.h  KGFX_DXCComplieDx12.cpp  KGFX_DXCComplieDx12.h  KGFX_DescriptorCacheDX12.cpp  KGFX_DescriptorCacheDX12.h  KGFX_DescriptorDX12.cpp  KGFX_DescriptorDX12.h  KGFX_DescriptorHeapDX12.cpp  KGFX_DescriptorHeapDX12.h  KGFX_DeviceDumpDred.h  KGFX_Dx12Header.cpp  KGFX_Dx12Header.h  KGFX_Dx12Healper.cpp  KGFX_Dx12Healper.h  KGFX_FenceDX12Impl.cpp  KGFX_FenceDX12Impl.h  KGFX_GraphiceDeviceDx12.cpp  KGFX_GraphiceDeviceDx12.h  KGFX_GraphicsProgramDx12.cpp  KGFX_GraphicsProgramDx12.h  KGFX_HashFunDX12.cpp  KGFX_HashFunDX12.h  KGFX_PipelineCacheDX12.cpp  (+32 more)
KEnginePub/Private/dx12/DMA_2.0.0/: D3D12MemAlloc.cpp
KEnginePub/Private/encoder/: IKGFX_FrameEncoder.h  IKGFX_RenderAction.h  IKGFX_RenderActionEncoder.h  IKGFX_RenderCommand.h  IKGFX_RenderCommandBind.h  IKGFX_RenderCommandEncoder.h  KGFX_FrameEncoder.cpp  KGFX_RenderAction.cpp  KGFX_RenderActionEncoder.cpp  KGFX_RenderCommand.cpp  KGFX_RenderCommandBind.cpp  KGFX_RenderCommandEncoder.cpp
KEnginePub/Private/loader/: KGFX_AsyncBuffer.cpp  KGFX_AsyncBuffer.h  KGFX_FileTexture.cpp  KGFX_FileTexture.h  KGFX_MemTexture.cpp  KGFX_MemTexture.h  KGFX_MergedTexture2DArray.cpp  KGFX_MergedTexture2DArray.h  KTextureMask.cpp  KTextureMask.h  KTexturePool.cpp  KTexturePool.h  KTextureRaw.cpp  KTextureRaw.h
KEnginePub/Private/loader/image/: KSOIL.cpp  KSOIL.h  etc1.cpp  etc1.h  image_DXT.cpp  image_DXT.h  image_helper.cpp  image_helper.h  image_jpg.cpp  image_jpg.h  stb_image_aug.cpp  stb_image_aug.h  stbi_DDS_aug.h  stbi_DDS_aug_c.h
KEnginePub/Private/profile/: KProfileTools.cpp
KEnginePub/Private/profile/microprofile/: microprofile.cpp  microprofile.h
KEnginePub/Private/recorder/: KShaderRecorder.cpp  KShaderRecorder.h  KXGReporter.cpp  KXGReporter.h
KEnginePub/Private/switchoption/: KEngineSwitchOption.cpp
KEnginePub/Private/vulkan/: GFXVulkan.cpp  GFXVulkan.h  KGFX_GraphicDeviceVK.cpp  KGFX_GraphicDeviceVK.h  KGFX_ResourceLayoutTrackerVK.cpp  KGFX_ResourceLayoutTrackerVK.h  KGraphicDevice.cpp  KGraphicDevice.h  KMVK.mm  KMetalView.h  KMetalView.mm  KShaderResourcePoolVK.cpp  KShaderResourcePoolVK.h  KShaderResourceVK.cpp  KShaderResourceVK.h  KVulkan.h  KVulkanBindlessManager.cpp  KVulkanBindlessManager.h  KVulkanBuffer.cpp  KVulkanCommandBuffer.cpp  KVulkanCommandBuffer.h  KVulkanDebug.cpp  KVulkanDebug.h  KVulkanDefine.h  KVulkanDevice.cpp  KVulkanDevice.h  KVulkanDynamicRingBuffer.cpp  KVulkanDynamicRingBuffer.h  KVulkanFunc.cpp  KVulkanFunc.h  KVulkanFuncStub.cpp  KVulkanFuncStub.h  KVulkanGfxBarrier.cpp  KVulkanGraphicDevice.cpp  KVulkanGraphicDevice.h  KVulkanInitializers.h  KVulkanPrivate.cpp  KVulkanPrivate.h  KVulkanProgram.cpp  KVulkanProgram.h  (+18 more)
KEnginePub/Private/vulkan/aftermath/: NsightAftermathGpuCrashTracker.cpp  NsightAftermathGpuCrashTracker.h  NsightAftermathHelpers.h  NsightAftermathShaderDatabase.cpp  NsightAftermathShaderDatabase.h
KEnginePub/Private/vulkan/nativecamera/: KCameraBackground.h  KCameraHandler.cpp  KCameraHandler.h  KHardwareBufferBackground.cpp  KHardwareBufferBackground.h  KNativeCamera.cpp  KNativeCamera.h  KNativeCameraUtility.cpp  KNativeCameraUtility.h  KNativeImageReader.cpp  KNativeImageReader.h
KEnginePub/Public/: EngineOption2.h  IGFX_Public.h  IGFX_RHIHelper.h  IKEngineOption.h  IKEnginePerformance.h  IKGFX_LoadThread.h  IKHeader.h  IKInputKeyDefine.h  IKLoadable.h  IKResource.h  IKShaderVK.h  IKTexture.h  IKVertexInputDefine.h  KEngineAdaptiveGame.h  KEngineOptionBase.h  KEsDrv.h  KProfileTools.h
KEnginePub/Public/switchoption/: KEngineSwitchOption.h
RenderControl/: CMakeLists.txt
RenderControl/domecore/: CMakeLists.txt
RenderControl/domecore/private/: domecore.cpp  memory.cpp  memory.h  unittest.cpp
RenderControl/domecore/private/filesys/: externalfs.cpp
RenderControl/domecore/private/mm/: domeallocatorv2.h  fixedallocator.h  smallsizeallocator.h  systemallocator.h  tinyblockallocator.h
RenderControl/domecore/private/network/: tcpserver.cpp  (+1 more)
RenderControl/domecore/public/: configure.h  defines.h  domecore.h  error.h  math.h  os.h  singleton.h  threadhub.h  typedvaluehub.h
RenderControl/rc/private/: mdexecuter_compiler.cpp  mdfilegpuoperator.cpp  mdoperandvalueptr.cpp  mdoperationgpu_gpuutil.h  microdata.cpp  rceffect.cpp  rceffectmanager.cpp  rcglobal.cpp
RenderControl/rc/public/: iexecuter.h  mdoperandvalueptr.h  mdoperation.h  mdoperationcpu.h  mdoperationgpu.h  mdoperator.h  mdoperatorcpu.h  mdoperatorgpu.h  rcconfigure.h  rcdefines.h  rceffect.h  rceffectmanager.h  rceffectnode.h  rcglobal.h  rcmanager.h  rcparametersys.h  rcrenderer.h
RenderControl/rcmod/private/: rcmod_float2.cpp  rcmod_float3.cpp  rcmod_float4x4.cpp
RenderControl/rcmod/public/: rcmod_float2.h  rcmod_float2x2.h  rcmod_float3x3.h  rcmod_float4.h  rcmod_string.h  rcpi_scene.h
(+1717 files in other folders)
